--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-blinker==1.7.0
+blinker==1.8.1
 click==8.1.7
-Flask==3.0.2
+Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
-itsdangerous==2.1.2
+greenlet==3.0.3
+itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 python-dotenv==1.0.1
 SQLAlchemy==2.0.29
-typing_extensions==4.10.0
-Werkzeug==3.0.1
-psycopg2 == 2.9.9
+typing_extensions==4.11.0
+Werkzeug==3.0.2
+
